--- a/.github/workflows/trigger_release.yml
+++ b/.github/workflows/trigger_release.yml
@@ -1,9 +1,11 @@
 name: Build Application and Make Release
 
+
 on:
   push:
     tags:
       - "*"
+  workflow_dispatch:
 
 jobs:
   build_release:
